Started incorporating API into app

--- a/src/app/core/nav/nav.component.html
+++ b/src/app/core/nav/nav.component.html
@@ -18,4 +18,8 @@
       </li>
     </ul>
   </div>
+
+  <button class="btn btn-primary" routerLink="/monitoring/new-brew">
+    New Brew
+  </button>
 </nav>
