feat: Added components for fermentation list, detail, etc. feat: Added a service to manage API requests.

--- a/src/app/monitoring/monitoring/monitoring.component.html
+++ b/src/app/monitoring/monitoring/monitoring.component.html
@@ -1,3 +1,12 @@
+<div class="card">
+  <div class="card-body">
+    <h1 class="card-title">Monitoring</h1>
+    <div class="card-text">
+      Here will be a table of fermentations that are currently associated with a device in the database.
+    </div>
+  </div>
+</div>
+
 <p>
   monitoring works!
 </p>
