--- a/src/app/monitoring/monitoring/monitoring.component.html
+++ b/src/app/monitoring/monitoring/monitoring.component.html
@@ -7,11 +7,4 @@
   </div>
 </div>
 
-<p>
-  monitoring works!
-</p>
-<ul>
-  <li>Graph of temperature vs time</li>
-  <li>Graph of SG vs time</li>
-  <li>Graph of target temp vs time?</li>
-</ul>
+<router-outlet></router-outlet>
