--- a/src/app/monitoring/fermentation-detail/fermentation-detail.component.html
+++ b/src/app/monitoring/fermentation-detail/fermentation-detail.component.html
@@ -1,3 +1,13 @@
-<p>
-  fermentation-detail works!
-</p>
+<div *ngIf="fermentation">
+  <div class="card">
+    <div class="card-body">
+      <h4 class="card-title">{{ fermentation.name }} (ID: {{ fermentation.id }})</h4>
+    </div>
+  </div>
+  <div class="card" *ngFor="let dataset of fermentation.datasets">
+    <div class="card-body">
+      <h4 class="card-title">{{ dataset.variable_measured }} ({{ dataset.unit }})</h4>
+      <div class="card-text"></div>
+    </div>
+  </div>
+</div>
